--- a/test/index.html
+++ b/test/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechCart - Home</title>
+    <title>GreenCart - Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">TechCart</div>
-            <ul class="nav-links" style="display: flex; align-items: end; justify-content: end; width: 90vw;">
+            <ul class="nav-links">
                 <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
@@ -31,9 +31,26 @@
         </div>
     </section>
 
+    <!-- <section class="products">
+        <h1>Our Products</h1>
+        <div class="product-list" id="product-list">
+            <div class="product-card">
+                <img src="https://via.placeholder.com/250" alt="Laptop">
+                <h3>Laptop</h3>
+                <p>$800</p>
+                <a href="product.html?id=1">View Details</a>
+            </div>
+            <div class="product-card">
+                <img src="https://via.placeholder.com/250" alt="Smartphone">
+                <h3>Smartphone</h3>
+                <p>$500</p>
+                <a href="product.html?id=2">View Details</a>
+            </div>
+        </div>
+    </section> -->
+
     <footer>
         <p>© 2024 TechCart. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 </html>
